package com.ecms.exception;

public class ResourceNotFoundException extends RuntimeException {
}
